--- a/JavaScript/Portfolio/style.css
+++ b/JavaScript/Portfolio/style.css
@@ -8,9 +8,11 @@
 :root {
     --color-white: white;
     --color-black: black;
-    --color-beige: beige;
     --color-mycolor: #4a8aad;
-    --color-mycolor-bold: #EC407A;
+    --color-mycolor-bold: #5a48c0;
+    --color-beige: beige;
+    --color-gray: gray;
+    --color-gray-bold: #5f5f5f;
 
     --font-large: 48px;
     --font-medium: 28px;
@@ -121,6 +123,20 @@ p {
     display: none;
 }
 
+
+/* nav 과제 */
+.navbar__menu.active{
+    position: relative;
+    margin: 0 auto;
+    flex-direction: none;
+    text-align: center;
+    width: 100%;
+    display: block; /*none 에서 block으로 보여주고*/
+}
+.navbar_action.active{
+    align-self: center;
+}
+
 /* 홈 */
 #home {
     background: url(./images/home.png) center/cover no-repeat;
@@ -160,3 +176,331 @@ p {
     max-width: 1200px;
     margin: auto;
 }
+
+/* 내 소개 */
+.about__majors {
+    display: flex;
+    justify-content: space-between;
+    margin: 80px 0;
+}
+
+.major__icon {
+    width: 170px;
+    height: 170px;
+    line-height: 170px;
+    font-size: 70px;
+    margin: auto;
+    color: var(--color-mycolor);
+    border: 1px solid var(--color-mycolor);
+    border-radius: 50%;
+    margin-bottom: 16px;
+}
+
+.major__icon i {
+    transition: all var(--animation-duration) ease;
+}
+
+.major__icon i:hover {
+    color: var(--color-mycolor-bold);
+    transform: scale(1.1)
+}
+
+.major__title, .major__description {
+    color: var(--color-black);
+}
+
+.major__description {
+    font-size: var(--font-small);
+}
+
+.job {
+    display: flex;
+    align-items: center;
+}
+
+.job__description {
+    margin:  0 16px;
+    text-align: left;
+}
+
+.job__name, .job__period {
+    color: var(--color-black)
+}
+
+.job__name {
+    font-size: var(--font-small)
+}
+
+.job__period {
+    font-size: var(--font-micro)
+}
+
+.about__jobs__icon {
+    width: 90px;
+    height: 90px;
+}
+
+/* 기술 */
+#skills { background-color: var(--color-beige); }
+
+.skillset {
+    display: flex;
+    background-color: var(--color-white);
+    color: var(--color-white);
+    margin: 20px 0;
+}
+
+.skillset__title { 
+    color: var(--color-beige);
+    font-size: var(--font-medium);
+}
+
+.skillset__left {
+    flex-basis: 60%;
+    background-color: var(--color-gray);
+    padding: 20px 40px;
+}
+
+.skill { margin-bottom: 32px; }
+
+.skill__description {
+    display: flex;
+    justify-content: space-between;
+}
+
+.skill__bar {
+    width: 100%;
+    height: 3px;
+    background-color: var(--color-mycolor);
+}
+
+.skill__value {
+    height: 3px;
+    background-color: var(--color-mycolor-bold);
+}
+
+.skillset__right {
+    flex-basis: 40%;
+    background-color: var(--color-gray-bold);
+}
+
+.tools {
+    padding: 20px;
+}
+
+.etc { padding: 20px; }
+
+/* 내 작업실 */
+.work__categories { margin: 40px; }
+
+.category__btn {
+    border: 1px solid var(--color-mycolor);
+    border-radius: var(--size-border-radius);
+    font-size: var(--font-regular);
+    padding: 8px 48px;
+    color: var(--color-white);   
+}
+
+.category__btn.selected, .category__btn:hover {
+    background-color: var(--color-mycolor);
+    color: var(--color-white);
+}
+
+.category__btn.selected .category__count, .category__btn:hover .category__count {
+    opacity: 1;
+    top: 0;
+}
+
+.category__count {
+    background-color: var(--color-mycolor-bold);
+    border-radius: 50%;
+    color: var(--color-white);
+    width: 24px;
+    height: 24px;
+    line-height: 24px;
+    display: inline-block;
+    position: relative;
+    top: -20px;
+    left: 4px;
+    opacity: 0;
+    transition: all var(--animation-duration) ease-in;
+}
+
+.work__projects {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.work__projects.anim-out {
+    opacity: 0;
+    transform: scale(0.96) translateY(40px);
+}
+
+.project.invisible {
+    display: none;
+}
+
+.project {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 280px;
+    height: 250px;
+    margin: 2px;
+    background-color: var(--color-beige);
+}
+
+.project.none {
+    display: none;
+}
+
+.project__img {
+    max-width: 100%;
+    max-height: 100%;
+    align-self: center;
+}
+
+.project__description {
+    position: absolute;
+    background-color: var(--color-black);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: all var(--animation-duration) ease-in;
+}
+
+.project:hover .project__description {
+    opacity: 0.8;
+    transform: translateY(0px);
+}
+
+.project__description h3 {
+    color: var(--color-white);
+}
+
+.project__description h3:after {
+    content: '';
+    display: block;
+    position: relative;
+    left: 50%;
+    width: 25px;
+    height: 2px;
+    margin-left: -12px;
+    margin-top: 8px;
+    background-color: var(--color-mycolor-bold);
+}
+
+/* 추천서 */
+#testimonials { background-color: var(--color-beige); }
+
+.testimonials { margin: 40xp; }
+
+.testimonial {
+    display: flex;
+    margin: 32px 0;
+}
+
+.testimonial__avatar {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+
+.testimonial__avatar:nth-child(odd) {
+    margin-right: 40px;
+}
+
+.testimonial__speech-bubble {
+    padding: 18px;
+    background-color: var(--color-white);
+    border-radius: var(--size-border-radius);
+}
+
+.testimonial__speech-bubble p {
+    color: var(--color-black);
+}
+
+.testimonial__speech-bubble a {
+    color: var(--color-mycolor);
+}
+
+/* 연락주세요 */
+#contact { background-color: var(--color-mycolor); }
+.contact__title, .contact__email, .contact__rights {
+    color: var(--color-white);
+}
+
+.contact__title { margin: 32px 0; }
+
+.contact__links {
+    font-size: var(--font-large);
+    margin: 24px 0;
+    transition: all var(--animation-duration) ease-in;
+}
+
+.contact__links i:hover {
+    transform: scale(1.1);
+    color: var(--color-mycolor-bold);
+}
+
+.arrow-up {
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    width: 70px;
+    height: 70px;
+    font-size: 50px;
+    color: var(--color-white);
+    background-color: var(--color-mypink--deep);
+    border-radius: 50%;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 300ms ease-in;
+}
+.arrow-up.visible {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+@media screen and (max-width: 768px) {
+    .navbar__toggle-btn {
+        display: block;
+        background-color: var(--color-mycolor);
+    }
+
+    #navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .navbar__menu {
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+        display: none;
+    }
+
+    .navbar__menu.open { display: block; }
+
+    .about__majors { flex-direction: column; }
+
+    .major { margin-bottom: 40px; }
+
+    .skillset { flex-direction: column; }
+
+    .project { flex-grow: 1;}
+
+    .testimonial__avatar {
+        width: 80px;
+        height: 80px;
+    }
+}
+
